# example

./: .gitignore  CMakeLists.txt  README.md
src/: CMakeLists.txt  FooBar.cpp  FooBar.h  FooBarOpenCV.cpp  FooBarOpenCV.h
src/main/: CMakeLists.txt  main.cpp
